--- a/app/views/backend/product_transfers/index.html.haml
+++ b/app/views/backend/product_transfers/index.html.haml
@@ -2,5 +2,5 @@
   -k.radio :all, :confirmed, :unconfirmed, :i18n_root=>"labels.criterion_modes."
 =toolbar do |t|
   -t.link :new
-  -t.link :confirm_all unless StockTransfer.unconfirmeds.count.zero?
+  -#t.link :confirm_all unless ProductTransfer.unconfirmeds.count.zero?
 =list
