--- a/app/themes/tekyla/stylesheets/active-list.css.scss
+++ b/app/themes/tekyla/stylesheets/active-list.css.scss
@@ -71,7 +71,7 @@ $list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
 
                 a {
                   .icon { @include is-icon }
-                  &.pages     .icon { @include use-icon(list); }
+                  &.pages     .icon { @include use-icon(reorder); }
                   &.columns   .icon { @include use-icon(columns); }
                 }
                 .icon { @include is-icon }
@@ -109,7 +109,7 @@ $list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
           @include ellipsis;
           &.chk,&.act, &.dld, &.bln, &.dat, &.web  {
             @include text-align(center);
-            .checkbox-true, .checkbox-false { margin: 0 auto; }
+            .checkbox-true, .checkbox-false { margin: 3px auto 0; }
           }
           &.dec, &.flt, &.int { @include text-align(right) }
           &.country { white-space: nowrap; }
@@ -251,40 +251,40 @@ $list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
         &.abort       i { @include use-icon(remove); }
         &.action      i { @include use-icon(cog); }
         &.backup      i { @include use-icon(backward); }
-        &.cancel      i { @include use-icon(cancel); }
+        &.cancel      i { @include use-icon(undo); }
         &.checked     i { @include use-icon(check); }
-        &.close       i { @include use-icon(close); }
-        &.column      i { @include use-icon(column); }
-        &.confirm     i { @include use-icon(validate); }
-        &.configure   i { @include use-icon(configure); }
+        &.close       i { @include use-icon(lock); }
+        &.column      i { @include use-icon(columns); }
+        &.confirm     i { @include use-icon(ok); }
+        &.configure   i { @include use-icon(wrench); }
         &.correct     i { @include use-icon(edit); }
         &.edit i,    &.update i { @include use-icon(edit); }
-        &.new i,     &.create i { @include use-icon(new); }
+        &.new i,     &.create i { @include use-icon(plus); }
         &.destroy i, &.delete i { @include use-icon(remove); }
-        &.divide      i { @include use-icon(divide); }
-        &.down        i { @include use-icon(down); }
-        &.duplicate   i { @include use-icon(duplicate); }
-        &.extract     i { @include use-icon(cog); }
+        &.divide      i { @include use-icon(resize-full); }
+        &.down        i { @include use-icon(chevron-down); }
+        &.duplicate   i { @include use-icon(copy); }
+        &.extract     i { @include use-icon(download-alt); }
         &.filter      i { @include use-icon(filter); }
-        &.firefox     i { @include use-icon(down); }
-        &.help        i { @include use-icon(help); }
-        &.import      i { @include use-icon(left); }
+        &.firefox     i { @include use-icon(chevron-down); }
+        &.help        i { @include use-icon(question-sign); }
+        &.import      i { @include use-icon(upload-alt); }
         &.letter      i { @include use-icon(mark); }
-        &.load        i { @include use-icon(load); }
-        &.logout      i { @include use-icon(logout); }
-        &.mail        i { @include use-icon(mail); }
-        &.merge       i { @include use-icon(merge); }
+        &.load        i { @include use-icon(refresh); }
+        &.logout      i { @include use-icon(off); }
+        &.mail        i { @include use-icon(envelope); }
+        &.merge       i { @include use-icon(resize-small); }
         &.point       i { @include use-icon(point); }
         &.print       i { @include use-icon(print); }
         &.reflect     i { @include use-icon(cog); }
         &.refuse      i { @include use-icon(remove); }
-        &.register    i { @include use-icon(new); }
-        &.restore     i { @include use-icon(left); }
+        &.register    i { @include use-icon(plus); }
+        &.restore     i { @include use-icon(chevron-left); }
         &.sort        i { @include use-icon(sort); }
         &.table       i { @include use-icon(table); }
-        &.unchecked   i { @include use-icon(false); }
+        &.unchecked   i { @include use-icon(check-empty); }
         &.unmark      i { @include use-icon(unmark); }
-        &.up          i { @include use-icon(up); }
+        &.up          i { @include use-icon(chevron-up); }
       }
 
     }
