--- a/app/views/backend/settings/about.html.haml
+++ b/app/views/backend/settings/about.html.haml
@@ -1,8 +1,6 @@
 #about-us
-  %div
-    =link_to image_tag("ekylibre.png"), "http://www.ekylibre.org"
-    %table.attribute-list
-      -for p in @properties
-        %tr
-          %td.label=p[0]
-          %td.value=p[1]
+  =link_to(image_tag("ekylibre.png"), "http://www.ekylibre.org", :class => :logo)
+  %dl
+    -for p in @properties
+      %dt=p[0]
+      %dd=p[1]
