adding Meteo widgets in production dashboard

--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -13,4 +13,5 @@
   -tabbox do
     -cell :last_events
     -cell :product_bar
-    -cell :demo_bar
+    -cell :meteo do
+      %img{:alt => "météo Saint-Porchaire heure par heure", :border => "0", :src => "http://meteorologic.net/vignette-previ-1h/6026.png"}
