--- a/app/views/backend/dashboards/welcome.html.haml
+++ b/app/views/backend/dashboards/welcome.html.haml
@@ -1,1 +1,6 @@
 =render :partial=>"general"
+
+=beehive(:general) do
+  -tabbox do
+    -cell :meteo do
+      %img{:alt => "météo Saint-Porchaire heure par heure", :border => "0", :src => "http://meteorologic.net/vignette-previ-1h/6026.png"}
