--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -144,7 +144,7 @@ $fs-huge:      round($fs-ratio*$fs-large);
 $fs-very-huge: round($fs-ratio*$fs-huge);
 
 $neutral-color: #777;
-$base-color: #2BA6CB; // #7A1; //#2BA6CB (ZURB) // #16D (Google)
+$base-color: #688ED8; //#2BA6CB; // #7A1; //#2BA6CB (ZURB) // #16D (Google)
 $active-color: $base-color; // #DE7308; // mix(green, $base-color, 50%);
 $link-color:  darken($base-color, 27%);
 $link-color:  darken($base-color, 10%);
@@ -487,11 +487,8 @@ $topBarBgColor: $active-color;
 $topBarDropBgColor: $topBarBgColor;
 // $topBarBgColor: #000000;//default $active-color //#000000 (ZURB)
 // $topBarDropBgColor: darken($topBarBgColor, 1%);
->>>>>>> 84324510844e2f7f18979be1e777053933f9bfb2
 
 @import "foundation";
-
-
 
 
 @import "active-list/minimal";
