--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -9,7 +9,7 @@
     -cell :last_products
     -cell :elevage_rss
     -cell :video do
-      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "141", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/57127234?title=0&byline=0&portrait=0", :webkitallowfullscreen => "", :width => "250"}
+      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "400", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/57127234?title=0&byline=0&portrait=0", :webkitallowfullscreen => "", :width => "100%"}
   -tabbox do
     -cell :last_events
     -cell :product_bar
