--- a/app/views/backend/cells/elevage_rss_cells/show.html.haml
+++ b/app/views/backend/cells/elevage_rss_cells/show.html.haml
@@ -1,2 +1,10 @@
--for entry in @feeds.entries
-  %h4=entry.title
+.rss-feed
+  .rss-title=@feed.title
+  .rss-entries
+    -for entry in @feed.entries
+      =link_to(entry.url, :class => "rss-entry", :target => "_blank") do
+        %h4.rss-entry-title
+          =entry.title
+          %i
+        %p.rss-entry-summary=entry.summary
+        %p.rss-entry-published=entry.published.l
